--- a/try_s3.ipynb
+++ b/try_s3.ipynb
@@ -221,6 +221,26 @@
     "df.printSchema()\n",
     "df.show(false)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from os.path import expanduser\n",
+    "from pathlib import Path\n",
+    "home = expanduser(\"~\")\n",
+    "airflow_dir = os.path.join(home, 'airflow')\n",
+    "Path(f\"{airflow_dir}/dags\").mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
