new things added

--- a/try_s3.ipynb
+++ b/try_s3.ipynb
@@ -9,9 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['quickstart-events', 'aicore_topic', '__consumer_offsets']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from kafka import KafkaAdminClient\n",
     "from kafka.admin import NewTopic\n",
@@ -28,9 +39,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'error_code': 0,\n",
+       "  'topic': 'aicore_topic',\n",
+       "  'is_internal': False,\n",
+       "  'partitions': [{'error_code': 0,\n",
+       "    'partition': 0,\n",
+       "    'leader': 0,\n",
+       "    'replicas': [0],\n",
+       "    'isr': [0],\n",
+       "    'offline_replicas': []}]}]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "admin_client.describe_topics(topics=[\"aicore_topic\"])"
    ]
